[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)", "Scattered-Systems (https://gitlab.com/scsys)"]
categories = []
description = "Algae is a collection of core algorithms and data-structures, written in Rust"
edition = "2021"
homepage = "https://github.com/scattered-systems/algae/wiki"
keywords = ["algorithms", "data-structures"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/algae"
version = "0.1.20"

[workspace.dependencies]
decanter = { features = ["derive"], version = "0.1.6" }
# decanter = { features = ["derive"], git = "https://github.com/FL03/decanter", branch = "v0.1.7", version = "0.1.7" }

anyhow = "1"
itertools = "0.11"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.7"
strum = { features = ["derive"], version = "0.25" }

[workspace]
default-members = [
    "algae"
]

members = [
    "algae",
    "graph",
    "merkle",
    "mmr"
]

resolver = "2"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"