[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)", "Scattered-Systems (https://gitlab.com/scsys)"]
categories = []
description = "Algae is a collection of core algorithms and data-structures, written in Rust"
edition = "2021"
homepage = "https://github.com/scattered-systems/algae/wiki"
keywords = ["algorithms", "data-structures"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/algae"
version = "0.1.20"

[workspace.dependencies]

# decanter = { features = ["derive"], git = "https://github.com/FL03/decanter", branch = "v0.1.7", version = "0.1.7" }

anyhow = "1"
itertools = "0.12"
smart-default = "0.7"
strum = { features = ["derive"], version = "0.26" }

[workspace]
default-members = [
    "algae"
]

members = [
    "algae", 
    "core",
    "graph",
    "merkle",
    "mmr", 
    "queue",
]

resolver = "2"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
