[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "algae"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["core", "graph", "merkle", "mmr"]
full = [
    "core",
    "graph",
    "merkle", 
    "mmr", 
]

core = []
graph = ["algae-graph"]
merkle = ["algae-merkle"]
mmr = ["algae-mmr"]

wasm = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
algae-graph = { features = [], optional = true, path = "../graph", version = "0.1.19" }
algae-merkle = { features = [], optional = true, path = "../merkle", version = "0.1.19" }
algae-mmr = { features = [], optional = true, path = "../mmr", version = "0.1.19" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
