[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "algae"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "ds",
]

full = [
    "ds",
    "serde",
]

ds = [
    "graph",
    "merkle",
    "mmr",
    "queue",
]

graph = [
    "dep:algae-graph"
]
merkle = [
    "dep:algae-merkle"
]
mmr = [
    "dep:algae-mmr"
]

queue = [
    "dep:algae-queue"
]

wasm = []

serde = [
    "algae-core/serde",
    "algae-graph/serde",
    "algae-merkle/serde",
    "algae-queue/serde",
]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[[example]]
name = "graph"
required-features = ["graph"]


[build-dependencies]

[dependencies]
algae-core = { path = "../core", version = "0.1.20" }
algae-graph = { optional = true, path = "../graph", version = "0.1.20" }
algae-merkle = { optional = true, path = "../merkle", version = "0.1.20" }
algae-mmr = { optional = true, path = "../mmr", version = "0.1.20" }
algae-queue = { optional = true, path = "../queue", version = "0.1.20" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
