[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Algae is a collection of core algorithms and data-structures, written in Rust"
edition = "2021"
homepage = "https://scattered-systems.github.io/algae"
keywords = ["algorithms", "data-structures"]
license = "MIT"
name = "algae-core"
repository = "https://github.com/scattered-systems/algae"
version = "0.1.0" # TODO - Update the cargo package version


[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
serde = { features = ["derive"], version = "1.0.145" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]