[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Derive macros created for Algae, a collection of useful algorithms and data-structures"
edition = "2021"
homepage = "https://scattered-systems.github.io/algae"
keywords = ["algorithms", "data-structures", "derive"]
license = "MIT"
name = "algae-derive"
readme = "README.md"
repository = "https://github.com/scattered-systems/algae"
version = "0.1.8" # TODO - Update the cargo package version

[lib]
proc-macro = true
test = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { features = ["full"], version = "1.0.98" }