[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "algae-graph"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []


[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]

[dev-dependencies]

[dependencies]
decanter.workspace = true
itertools.workspace = true
scsys.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
