[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "algae-graph"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

wasm = []

serde = [
    "dep:serde",
    "serde-ext"
]

serde-ext = [
    "dep:serde_json"
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[build-dependencies]

[dependencies]
itertools.workspace = true
serde = { optional = true, features = ["derive"], version = "1" }
serde_json = { optional = true, version = "1" }
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
