[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "Algae is a collection of algorithms and data structures optimized for building decentralize systems..."
edition = "2021"
homepage = "https://scattered-systems.github.io/algae"
keywords = ["algorithims", "data-structures", "macros"]
license = "MIT"
name = "algae-macros"
readme = "README.md"
repository = "https://github.com/scattered-systems/algae"
version = "0.1.7" # TODO - Update the cargo package version

[lib]
proc-macro = true
test = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { features = ["full"], version = "1.0.98" }