[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Algae is a collection of core algorithms and data-structures, written in Rust"
edition = "2021"
homepage = "https://scattered-systems.github.io/algae"
keywords = ["algorithms", "data-structures"]
license = "MIT"
name = "algae-macros"
repository = "https://github.com/scattered-systems/algae"
version = "0.1.9" # TODO - Update the cargo package version

[lib]
proc-macro = true
test = true

[dependencies]
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = "1.0.98"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]