[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Algae is a collection of core algorithms and data-structures, written in Rust"
edition = "2021"
homepage = "https://gitlab.com/scsys/lib/crates/algae/-/wiki"
keywords = ["algorithms", "data-structures"]
license = "MIT"
name = "algae-macros"
repository = "https://gitlab.com/scsys/lib/crates/algae"
version = "0.1.10" # TODO - Update the cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = "1.0.101"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]