[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["algorithms", "data-structures"]
license.workspace = true
name = "algae-merkle"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "ring/default"
]
wasm = [
    "decanter/wasm",
    "ring/wasm32_c"
]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
anyhow.workspace = true
blake3 ={ features = [], version = "1.3" }
decanter.workspace = true
hex = "0.4"
itertools.workspace = true
ring = { features = ["wasm32_c"], version = "0.16" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]
hex-literal = "0.3"
log = "0.4"
vrf = "0.2"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
