[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["algorithms", "data-structures"]
license.workspace = true
name = "algae-merkle"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [

]

wasm = [

]

serde = [
    "dep:serde",
    "serde-ext"
]

serde-ext = [
    "dep:serde_json"
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
anyhow.workspace = true
blake3 = { features = [], version = "1" }
decanter = { features = ["derive"], version = "0.1.6" }
hex = "0.4"
itertools.workspace = true
serde = { optional = true, features = ["derive"], version = "1" }
serde_json = { optional = true, version = "1" }
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]
hex-literal = "0.4"
lazy_static = "1.4"
log = "0.4"
rs_merkle = "1.4"
vrf = "0.2"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
