[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["algorithms", "data-structures"]
license.workspace = true
name = "algae-mmr"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "decanter/derive"
]
wasm = [
    "decanter/wasm"
]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
anyhow.workspace = true
decanter.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

digest = "0.10"
hex = "0.4"

[dev-dependencies]
scsys = { features = [], version = "0.1.41" }
hex-literal = "0.3.4"
vrf = "0.2.4"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
