[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["algorithms", "data-structures"]
license.workspace = true
name = "algae-mmr"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [

]

wasm = [

]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
anyhow.workspace = true
decanter = { features = ["derive"], version = "0.1.6" }
digest = "0.10"
hex = "0.4"
itertools.workspace = true
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]
hex-literal = "0.4"
vrf = "0.2"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
